package com.example.model.util.printer;

public interface Documento {
    public String getTitulo();
    public String getCuerpo();
    public String getPie();
}
