package com.example.model.util.printer;

public abstract class ImpresoraAbs implements Impresora{
    
}
