@startuml diagrama de clases

class Objeto{

}

class DocumentoFormato{
    TXT, MARKDOWN, PDF
}

interface Documento{
    + getTitulo(): String
    + getCuerpo(): String
    + getPie(): String
}

interface Imprimible{
    + imiprimir(documento: Documento): byte[]
}

class DocumentoFactory{
    + obtener(formato: DocumentoFormaro):Impresora
}

abstract class ImpresoraAbs{

}

class ImpresoraTXT{

}

class ImpresoraMarkdown{

}

class ImpresoraPDF{

}

class ImpresoraParaImprimir{
    + {static} imprimir(documento: Documento, df: DocumentoFormato): void
}

Objeto ..|> Documento

Impresora <|.. ImpresoraAbs
ImpresoraAbs <|-- ImpresoraTXT
ImpresoraAbs <|-- ImpresoraMarkdown
ImpresoraAbs <|-- ImpresoraPDF

ImpresoraParaImprimir ..> FicheroBinario
@enduml